query the CVS tree.  For example,

    http://cvs-mirror.mozilla.org/webtools/bonsai/cvsquery.cgi?module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fwebtools%2Fbugzilla&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvsroot 

will tell you what has been changed in the last week.

12/2/98 The op_sys and rep_platform fields have been tweaked.  op_sys
is now an enum, rather than having the legal values all hard-coded in
perl.  rep_platform now no longer allows a value of "X-Windows".

Here's how I ported to the new world.  This ought to work for you too.
Actually, it's probably overkill.  I had a lot of illegal values for op_sys
in my tables, from importing bugs from strange places.  If you haven't done 
anything funky, then much of the below will be a no-op.

First, send the following commands to MySQL to make sure all your values for
rep_platform and op_sys are legal in the new world..

	update bugs set rep_platform="Sun" where rep_platform="X-Windows" and op_sys like "Solaris%";
	update bugs set rep_platform="SGI" where rep_platform="X-Windows" and op_sys = "IRIX";
	update bugs set rep_platform="SGI" where rep_platform="X-Windows" and op_sys = "HP-UX";
	update bugs set rep_platform="DEC" where rep_platform="X-Windows" and op_sys = "OSF/1";
	update bugs set rep_platform="PC" where rep_platform="X-Windows" and op_sys = "Linux";
	update bugs set rep_platform="other" where rep_platform="X-Windows";
	update bugs set rep_platform="other" where rep_platform="";
	update bugs set op_sys="Mac System 7" where op_sys="System 7";
	update bugs set op_sys="Mac System 7.5" where op_sys="System 7.5";
	update bugs set op_sys="Mac System 8.0" where op_sys="8.0";
	update bugs set op_sys="OSF/1" where op_sys="Digital Unix 4.0";
	update bugs set op_sys="IRIX" where op_sys like "IRIX %";
	update bugs set op_sys="HP-UX" where op_sys like "HP-UX %";
	update bugs set op_sys="Windows NT" where op_sys like "NT %";