@@ -52,6 +52,7 @@ index (assigned_to),
 index (delta_ts),
 index (bug_severity),
 index (bug_status),
+index (op_sys),
 index (priority),
 index (product),
 index (reporter),
